--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "fightingchange/myfirst",
-    "description": "lr",
+    "description": "lrlrlr",
     "authors": [
         {
             "name": "gao",
